// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets massages full saved state correctly 1`] = `
pa {
  "e": Array [
    "byAddress",
    pa {
      "e": Array [
        "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
        pa {
          "e": Array [
            "address",
            "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
            "own",
            pa {
              "e": Array [
                "name",
                "Alice",
                "phone",
                "555-555-5555",
                "connections",
                pa {
                  "e": Array [
                    "knows",
                    $g {
                      "Wa": pa {
                        "e": Array [
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                          null,
                        ],
                        "g": 1,
                        "j": 16647951,
                        "k": null,
                        "p": null,
                        "q": 8196,
                      },
                      "j": 15077647,
                      "k": null,
                      "p": null,
                      "q": 8196,
                    },
                    "worksWith",
                    $g {
                      "Wa": pa {
                        "e": Array [
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                          null,
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                          null,
                        ],
                        "g": 2,
                        "j": 16647951,
                        "k": null,
                        "p": null,
                        "q": 8196,
                      },
                      "j": 15077647,
                      "k": null,
                      "p": null,
                      "q": 8196,
                    },
                  ],
                  "g": 2,
                  "j": 16647951,
                  "k": null,
                  "p": null,
                  "q": 8196,
                },
              ],
              "g": 3,
              "j": 16647951,
              "k": null,
              "p": null,
              "q": 8196,
            },
            "activities",
            pa {
              "e": Array [
                "10",
                pa {
                  "e": Array [
                    "id",
                    10,
                    "type",
                    "transaction",
                    "client_id",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                    "to",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  ],
                  "g": 4,
                  "j": 16647951,
                  "k": null,
                  "p": null,
                  "q": 8196,
                },
                "11",
                pa {
                  "e": Array [
                    "id",
                    11,
                    "type",
                    "transaction",
                    "client_id",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                    "to",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  ],
                  "g": 4,
                  "j": 16647951,
                  "k": null,
                  "p": null,
                  "q": 8196,
                },
              ],
              "g": 2,
              "j": 16647951,
              "k": null,
              "p": null,
              "q": 8196,
            },
          ],
          "g": 3,
          "j": 16647951,
          "k": null,
          "p": null,
          "q": 8196,
        },
      ],
      "g": 1,
      "j": 16647951,
      "k": null,
      "p": null,
      "q": 8196,
    },
    "currentIdentity",
    "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
  ],
  "g": 2,
  "j": 16647951,
  "k": null,
  "p": null,
  "q": 8196,
}
`;

exports[`sets massages identity correctly 1`] = `
pa {
  "e": Array [
    "address",
    "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
    "own",
    pa {
      "e": Array [
        "name",
        "Alice",
        "phone",
        "555-555-5555",
        "connections",
        pa {
          "e": Array [
            "knows",
            $g {
              "Wa": pa {
                "e": Array [
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                  null,
                ],
                "g": 1,
                "j": 16647951,
                "k": null,
                "p": null,
                "q": 8196,
              },
              "j": 15077647,
              "k": null,
              "p": null,
              "q": 8196,
            },
            "worksWith",
            $g {
              "Wa": pa {
                "e": Array [
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                  null,
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  null,
                ],
                "g": 2,
                "j": 16647951,
                "k": null,
                "p": null,
                "q": 8196,
              },
              "j": 15077647,
              "k": null,
              "p": null,
              "q": 8196,
            },
          ],
          "g": 2,
          "j": 16647951,
          "k": null,
          "p": null,
          "q": 8196,
        },
      ],
      "g": 3,
      "j": 16647951,
      "k": null,
      "p": null,
      "q": 8196,
    },
    "activities",
    pa {
      "e": Array [
        "10",
        pa {
          "e": Array [
            "id",
            10,
            "type",
            "transaction",
            "client_id",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
            "to",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          ],
          "g": 4,
          "j": 16647951,
          "k": null,
          "p": null,
          "q": 8196,
        },
        "11",
        pa {
          "e": Array [
            "id",
            11,
            "type",
            "transaction",
            "client_id",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
            "to",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          ],
          "g": 4,
          "j": 16647951,
          "k": null,
          "p": null,
          "q": 8196,
        },
      ],
      "g": 2,
      "j": 16647951,
      "k": null,
      "p": null,
      "q": 8196,
    },
  ],
  "g": 3,
  "j": 16647951,
  "k": null,
  "p": null,
  "q": 8196,
}
`;
